# AI-OSI-ONE

./: .gitignore  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
config/app/: app.yaml
config/tools/: azure_devops.yaml  osi_one.yaml  teams.yaml
docs/: README.md
requirement/: arch-design.md  azure-devops-fields.md  cleanup-summary.md  development-summary.md  milestone2-summary.md  milestones.md  osi-one-agent-prd.md  pyqt5-gui-reminder.md  security-validations.md  ui-design-specifications.md  ui-roadmap.md
scripts/: get_available_states.py  setup_dev.py  test_assignee_update.py  test_batch_updates.py  test_case_sensitivity.py  test_config_setup.py  test_enhanced_ui.py  test_env_vars.py  test_fixed_commands.py  test_milestone2.py  test_multiline_input.py  test_nlp_debug.py  test_original_estimate.py  test_original_query.py  test_real_batch_update.py  test_safety_validation.py  test_specific_original_estimate.py  test_status_extraction.py  test_status_update.py  test_status_update_with_validation.py  test_task_update.py  test_type_specific_states.py  test_update_without_id.py  test_user_friendly_errors.py
src/: __init__.py  main.py
src/core/: __init__.py
src/core/agent/: orchestrator.py
src/core/nlp/: processor.py
src/security/: token_manager.py
src/tools/: __init__.py  azure_devops.py
src/ui/: terminal.py
src/ui/desktop/: __init__.py  chat_widget.py  demo.py  input_widget.py  main_window.py  message_bubble.py  notifications.py  styles.py  system_tray.py  voice_input.py
src/utils/: config.py  logger.py
tests/: __init__.py  conftest.py
tests/unit/: test_config.py  test_nlp.py
